--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                  <div>
                     <h3 class="font-bold text-lg">Langkah 1: Siapkan Google Sheet</h3>
                     <ol class="list-decimal list-inside mt-2 space-y-1 pl-2 text-gray-700">
-                        <li>Buka <a href="https://sheets.google.com/create" target="_blank" class="text-blue-600 hover:underline font-semibold">sheets.google.com</a> dan buat <strong>Spreadsheet baru</strong>.</li>
+                        <li>Buka <a href="https://docs.google.com/spreadsheets/create" target="_blank" class="text-blue-600 hover:underline font-semibold">https://docs.google.com/spreadsheets/create/a> dan buat <strong>Spreadsheet baru</strong>.</li>
                         <li>Anda <strong>tidak perlu</strong> membuat header atau mengganti nama Sheet. Skrip akan melakukannya secara otomatis.</li>
                     </ol>
                 </div>
