--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pintar Pencatat Pengeluaran</title>
+    <title>Si Pintar Pencatat Pengeluaran</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -101,7 +101,7 @@
 
     <div id="app-container" class="container mx-auto p-4 md:p-8 max-w-2xl">
         <header class="text-center mb-8 relative">
-            <h1 class="text-3xl md:text-4xl font-bold text-gray-900">Pintar Pencatat Pengeluaran</h1>
+            <h1 class="text-3xl md:text-4xl font-bold text-gray-900">Si Pintar Pencatat Pengeluaran</h1>
             <p class="text-gray-600 mt-2">Catat pengeluaran Anda dengan mudah melalui suara, upload, atau scan struk.</p>
              <button id="apiSettingsBtn" class="absolute top-0 right-0 text-gray-500 hover:text-blue-600 transition-colors" title="Pengaturan API">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
